Import of MILAN/OOP-1.01 from CPAN.
gitpan-cpan-distribution: OOP
gitpan-cpan-version:      1.01
gitpan-cpan-path:         MILAN/OOP-1.01.tar.gz
gitpan-cpan-author:       MILAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,7 +1,21 @@
 Revision history for Perl extension OOP.
 
-Version 1.0
------------
+Version 1.01
+------------
+This version fixes two serious bugs that made it a little difficult to
+work with OOP.
+
+One of the fixes covers the addition of exists() support for data
+structures used as parameters. Until now it was not possible to check
+whether or not an element existed in a hash. This fixes it.
+
+The second bug relates to the writeAccess property in a hash context.
+Until now the writeAccess property would be effective only to the 
+elements created (in which case anything was possible).  Now it 
+properly checks the parent structure to see what properties to take on.
+
+Version 1.00
+------------
 The first release of the OOP module handles properties that are passed
 to the constructor of any module.  It permits a developer to define
 various rules these properties have to follow in order for the custom
